# wavpa

./: Cargo.toml  README.md  database.rs  email.rs  home.html.tera  main.rs  models.rs  profile.html.tera  profile.rs  routes.rs  signup.rs  styles.css
src/: modelsv1.rs  modelsv2.rs
src/views/: session.rs  signin.rs
templates/: base.html.tera  billing.html.tera  signin.html.tera  signup.html.tera  signup2.html.tera
views/: billing.rs  home.rs  sessionv1.rs
