[package]
name = "WAVPA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
yew = "0.22.0"
tauri = "1.0.0-beta.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.0"
sled = "0.34.7"
sqlite = "0.26.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.5.0"
kafka = "0.10.0"
uuid = { version = "0.8", features = ["v4"] }
askama = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

##validator = "0.12.0"
validator = "0.13"
validator_derive = "0.13"
bcrypt = "0.9.0"

[dependencies.rocket_contrib]
version = "0.5.0-rc.1"
default-features = false
features = ["templates"]
